Migrate to Java 21 syntax where possible