@@ -65,7 +65,7 @@ public class Filters {
 
     public DashboardFilter named(String name) {
         FilterValidator.validateNamePresent(name);
-        return this.filterMap.getOrDefault(name.toLowerCase(), filters.get(0));
+        return this.filterMap.getOrDefault(name.toLowerCase(), filters.getFirst());
     }
 
     public List<DashboardFilter> filters() {
